--- a/.github/workflows/create-release.yaml
+++ b/.github/workflows/create-release.yaml
@@ -109,7 +109,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           RELEASE_ID=$(./.github/scripts/create_draft_release.sh ${{ github.event.inputs.name }})
-          echo "release_id=$RELEASE_ID" >> $GITHUB_OUTPUT
+      #          echo "release_id=$RELEASE_ID" >> $GITHUB_OUTPUT
 
       - name: Create release assets #TODO: Probably here we should generate busola chart
         id: create-assets
