--- a/.github/workflows/create-release.yaml
+++ b/.github/workflows/create-release.yaml
@@ -112,6 +112,11 @@ jobs:
           RELEASE_ID=$(./.github/scripts/create_draft_release.sh ${{ github.event.inputs.name }})
           echo "release_id=$RELEASE_ID" >> $GITHUB_OUTPUT
 
+      - name: Create lightweight tag
+        run: |
+          git tag ${{ github.event.inputs.name }}
+          git push origin ${{ github.event.inputs.name }}
+
       - name: Create release assets #TODO: Probably here we should generate busola chart
         id: create-assets
         env:
