--- a/.github/workflows/create-release.yaml
+++ b/.github/workflows/create-release.yaml
@@ -116,6 +116,7 @@ jobs:
           PULL_BASE_REF: ${{ github.event.inputs.name }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           REPOSITORY: dbadura/kyma-dashboard #TODO: Remove it
+          RELEASE_ID: ${{ needs.create-draft.outputs.release_id }}
         run: ./.github/scripts/upload_assets.sh
 
     outputs:
