--- a/.github/workflows/create-release.yaml
+++ b/.github/workflows/create-release.yaml
@@ -1,8 +1,6 @@
 name: create release
 
 on:
-  pull_request:
-    types: [opened, edited, synchronize, reopened, ready_for_review]
   workflow_dispatch:
     inputs:
       name:
@@ -116,7 +114,7 @@ jobs:
           PULL_BASE_REF: ${{ github.event.inputs.name }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           REPOSITORY: dbadura/kyma-dashboard #TODO: Remove it
-          RELEASE_ID: ${{ needs.create-draft.outputs.release_id }}
+          RELEASE_ID: ${{ steps.create-draft.outputs.release_id }}
         run: ./.github/scripts/upload_assets.sh
 
     outputs:
